30-May-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/vast_rdf: Code for synchronising annotations with a SPARQL
 endpoint.

22-April-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/button/annotation-indicator/annotation-indicator.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-annotate-btn/coref-annotate-btn.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-btn/coref-btn.component.ts:
 * clarin-angular/src/app/services/coreference-color-service/coreference-color.service.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Added functionality for specifying from which attribute the annotation
 colours/labels can be retrieved, in coreference annotations.

16-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * docker/Dockerfile:
 * clarin-angular/src/app/helpers/constants.ts:
 * clarin-angular/src/assets/data/menu.json:
 * clarin-angular/src/proxy-local.conf.json: Fixes for docker/podman.

13-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin_backend/mongodb_views.py:
 * clarin_backend/utils.py:
 * docker/docker-compose.yml: Fixes for docker/podman.

05-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/views.py:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 Added check whether to include the social login buttons in the user login
 view.

04-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * build_all.sh:
 * docker/.dockerignore:
 * docker/conf/requirements.txt:
 * docker/conf/AnnotationsSpecifications.xml: