@@ -22,45 +22,54 @@
             <mat-icon><fa-icon icon="file-excel"></fa-icon></mat-icon>
             <span>{{"Excel"|translate}}</span>
           </button>
-          <button mat-menu-item (click)="exporter.exportTable('csv')">
+          <button mat-menu-item (click)="exporter.exportTable('csv', {fileName:'annotations'})">
             <mat-icon><fa-icon icon="file-csv"></fa-icon></mat-icon>
             <span>{{"CSV"|translate}}</span>
           </button>
-          <button mat-menu-item (click)="exporter.exportTable('json')">
+          <button mat-menu-item (click)="exporter.exportTable('json', {fileName:'annotations'})">
             <mat-icon><fa-icon icon="file-code"></fa-icon></mat-icon>
             <span>{{"JSON"|translate}}</span>
           </button>
-          <button mat-menu-item (click)="exporter.exportTable('txt')">
+          <button mat-menu-item (click)="exporter.exportTable('txt', {fileName:'annotations'})">
             <mat-icon><fa-icon icon="file-lines"></fa-icon></mat-icon>
             <span>{{"TXT"|translate}}</span>
           </button>
+<button mat-menu-item (click)="exporter.exportTable('other', {fileName:'annotations'})">
+            <mat-icon><fa-icon icon="file-lines"></fa-icon></mat-icon>
+            <span>{{"TXT"|translate}}</span>
+          </button>
+
         </mat-menu>
       </div>
       <table mat-table [dataSource]="annotationsDataSource" multiTemplateDataRows
              class="annotation-visualiser-container" matSort
-             matTableExporter #exporter="matTableExporter"
+             matTableExporter #exporter="matTableExporter" [exporter]="skipDetailRowsExporter"
       >
+        <!--<ng-container matColumnDef="index">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+          <td mat-cell *matCellDef="let element; let i = dataIndex">{{i + 1}}</td>
+        </ng-container>-->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-          <td mat-cell *matCellDef="let annotation; let i = index" class="overflow-ellipsis">
+          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
             {{annotation._id}}
           </td>
         </ng-container>
         <ng-container matColumnDef="value">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Value</th>
-          <td mat-cell *matCellDef="let annotation; let i = index" class="overflow-ellipsis">
+          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
             {{annotation.attributes ? annotation.attributes[0].value : ""}}
           </td>
         </ng-container>
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-          <td mat-cell *matCellDef="let annotation; let i = index" class="overflow-ellipsis">{{(annotation.type == 'setting
-            annotation') ? ('Setting'|translate) : (annotation.type)}}
+          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
+            {{(annotation.type == 'setting annotation') ? ('Setting'|translate) : (annotation.type)}}
           </td>
         </ng-container>
         <ng-container matColumnDef="spans">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Spans</th>
-          <td mat-cell *matCellDef="let annotation;let i = index" class="overflow-ellipsis">
+          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
            {{annotation|annotationSpans: this.annotations}}
           </td>
         </ng-container>
